Fix library page
